--- a/postgres-pod.yml
+++ b/postgres-pod.yml
@@ -9,9 +9,10 @@ spec:
   containers:
   - name: postgres
     image: postgres:9.4
-    resources:
-      limits:
-        memory: "128Mi"
-        cpu: "500m"
+    env:
+    - name: POSTGRES_USER
+      value: "postgres"
+    - name: POSTGRES_PASSWORD
+      value: "postgres"
     ports:
       - containerPort: 5432
